--- a/CHANGELOG
+++ b/CHANGELOG
@@ -124,3 +124,4 @@
 		Fixed handler for FPS_DisableStatisPerRound.
 		Add new cvar: sm_fps_disable_additional_menu - Disable additional menu in main stats menu.
 1.6.2 - Fixed view message of points.
+		Added Latvian language.
